--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@kevinwolf/formal-web": "^0.1.3",
     "react": "^16.11.0",
+    "react-device-detect": "^1.9.10",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "rsuite": "^4.0.4",
