--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kevinwolf/formal-web": "^0.1.3",
     "react": "^16.11.0",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "rsuite": "^4.0.4",
-    "yup": "^0.27.0"
+    "rsuite": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
