--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "easy-peasy": "^3.1.0",
     "react": "^16.11.0",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.11.0",
