--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "easy-peasy": "^3.1.0",
-    "normalize.css": "^8.0.1",
     "idb": "^4.0.5",
+    "normalize.css": "^8.0.1",
     "react": "^16.11.0",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.11.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "rsuite": "^4.0.4"
   },
