--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf docs/static && react-scripts build && mv build/* docs",
+    "build": "rm -rf docs/static docs/query && react-scripts build && mv build/* docs && mkdir docs/query && cp docs/index.html docs/query",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
