--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "classnames": "^2.2.6",
     "idb": "^4.0.5",
     "normalize.css": "^8.0.1",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-device-detect": "^1.9.10",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.3.0",
     "rsuite": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf docs/static docs/query && react-scripts build && mv build/* docs && mkdir docs/query && cp docs/index.html docs/query",
+    "build-ws": "rmdir /S /Q docs & react-scripts build && mkdir docs\\query && copy build docs && copy docs\\index.html docs\\query",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
